# FileTransfer

./: .gitignore  CMakeLists.txt  README.MD
include/: ISender.h  Packets.h  Sender.h
include/communication/: Packets.h
include/communication/communicator/: AbstractCommunicator.h  ClientCommunicator.h  ICommunicator.h  ICommunicatorFactory.h  IServer.h  ServerCommunicator.h
include/comunication/comunicator/: AbstractComunicator.h  ClientComunicator.h  ComunicatorCreator.h  IComunicator.h  IComunicatorCreator.h  IServer.h  ServerComunicator.h
include/data_manager/: DataManager.h  IDataManager.h
include/data_manipulation/: DataManager.h  DataPacker.h  IDataManager.h  IDataPacker.h
include/facades/: FileTransferClient.h  FileTransferHelpers.h  FileTransferServer.h  IFileTransferClient.h  PacketData.h
include/front_end/: Menu.h
include/network/: Packets.h
include/network/communication/: AbstractCommunicator.h  ICommunicator.h  ICommunicatorCreator.h
include/tools/: CommandParser.h  ICommandParser.h  IPacketCreator.h  MessageTypeToString.h  PacketCreator.h  StringToEnumNumber.h
project/: setting_up.txt
src/: DataManager.cpp  FileTransferClient.cpp  FileTransferHelpers.cpp  FileTransferServer.cpp  file_transfer.cpp
src/communication/: AbstractCommunicator.cpp  AbstractCommunicator.h  Client.cpp  Client.h  ClientCommunicator.cpp  CommunicatorCreator.cpp  IServer.h  ServerCommunicator.cpp
src/comunication/: AbstractCommunicator.cpp  AbstractComunicator.cpp  Client.cpp  ClientComunicator.cpp  CommunicatorCreator.cpp  CommunicatorCreator.h  ComunicatorCreator.cpp  ICommunicator.h  ICommunicatorCreator.h  PacketsCreator.cpp  Server.cpp  Server.h  ServerComunicator.cpp
src/data_manager/: DataManager.cpp  IDataManager.h
src/data_manipulation/: DataPacker.cpp
src/facades/: FileTransferClient.cpp  FileTransferHelpers.cpp  FileTransferHelpers.h  FileTransferServer.cpp  FileTransferServer.h  PacketData.h
src/front_end/: Menu.cpp  Menu.h
src/tests/: command_parser_tests.cpp
src/tools/: CommandParser.cpp  CommandParser.h  ICommandParser.h  IPacketCreator.h  IPacketExtractor.h  MessageTypeToString.cpp  PacketCreator.cpp  PacketCreator.h  PacketExtractor.cpp  PacketExtractor.h  StringToEnumNumber.cpp  StringToEnumNumber.h
(+35 files in other folders)
